# AppProfile

./: README.md  agent.properties.example  build.sh  build_JDK7.sh  build_JDK8.sh  catalina_agent_in_tmp.sh  oss-profile_agent.sh  oss-test_agent.sh  pom.xml  reset.sh  startup_agent_in_tmp.sh  startup_agent_in_tmp_debug.sh  test_agent.sh  test_agent_debug.sh  test_huge.sh
bond/: pom.xml
bond/src/main/java/com/focusit/agent/bond/: Agent.java  AgentConfiguration.java  AgentManager.java  AsmClassTransformer.java  CGLibClassTransformer.java  ClassTransformer.java  JavaAssistClassTransformer.java  JvmMonitoring.java
bond/src/main/java/com/focusit/agent/bond/metrics/: ExecutionInfo.java  MethodsMap.java  MethodsMapDumper.java  StatisticDumper.java  Statistics.java
bond/src/main/java/com/focusit/agent/bond/string/: StringHolder.java
bond/src/main/java/com/focusit/agent/bond/time/: GlobalTime.java
bond/src/main/java/com/focusit/agent/metrics/: JvmMonitoring.java  MethodsMap.java  OSMonitoring.java  ProfilerDataHolder.java  SessionManager.java  Statistics.java  ThreadControl.java  ThreadProfilingControl.java  ThreadStatHolder.java
bond/src/main/java/com/focusit/agent/metrics/dump/: SamplesDataDumper.java  SamplesDumpManager.java
bond/src/main/java/com/focusit/agent/metrics/samples/: ExecutionInfo.java  JvmInfo.java  OSInfo.java  OSMetric.java  ProfilingInfo.java  Sample.java  SessionInfo.java  ThreadCallStat.java
bond/src/main/java/com/focusit/agent/utils/common/: BondLongObjectMap.java  BondThreadLocal.java  FixedSamplesArray.java  LongObjectRedBlackTree.java  StringUtils.java
bond/src/main/java/com/focusit/agent/utils/jmm/: FinalBoolean.java  FinalInteger.java  FinalLong.java  FinalWrapper.java  JmmUnsafe.java
bond/src/main/java/com/focusit/utils/common/: FixedSamplesArray.java
bond/src/main/java/com/focusit/utils/metrics/: ExecutionInfo.java  JvmMonitoring.java  MethodsMap.java  MethodsMapDumper.java  StatisticDumper.java  Statistics.java
bond/src/main/java/com/focusit/utils/metrics/samples/: ExecutionInfo.java  JvmInfo.java  JvmMetric.java  OSMetric.java  Sample.java
bond/src/main/java/com/focusit/utils/metrics/store/: Storage.java  StorageManager.java
bond/src/main/resources/: log4j.properties
bond/src/test/java/com/focusit/agent/utils/common/: BondThreadLocalTest.java  LongObjectRedBlackTreeTest.java
example/: pom.xml
example/src/main/java/com/focusit/agent/example/: JavaAppExample01.java
example/src/main/java/com/focusit/agent/example/Example01/: ClassToInstrument.java  JavaAppExample01.java
example/src/main/java/com/focusit/agent/example/example01/: AbstractTest.java  ClassToInstrument.java  JavaAppExample01.java  JavaAppExample02.java  JavaAppExample03.java  LongRunExample.java  TestInterface.java  TestInterfaceEnhancerBySpringCGLIB1.java
example/src/main/java/com/focusit/agent/example/example02/: ExampleManyStat.java
example/src/main/java/com/focusit/agent/example/multithread/: ClassOne.java  ClassThree.java  ClassTwo.java  JavaAppExample02.java
example/src/main/java/com/focusit/agent/example/profiler/: HeavyLoadProfilerExample.java
example/src/main/java/com/focusit/agent/example/tests/: TestInvocationCount.java
jassie/: pom.xml
jassie/src/main/java/com/focusit/agent/loader/jassie/: AgentLoader.java
managed-classdumper/: pom.xml  test_java_version.sh
managed-classdumper/src/main/assembly/: package.xml
managed-classdumper/src/main/java/com/focusit/agent/: ClassDumper.java
mongo/: pom.xml
mongo/src/main/java/com/focusit/agent/mongo/: JvmMonitoringLoader.java  Main.java  MethodMapLoader.java  MongoConfiguration.java  MongoLoader.java  StatisticsLoader.java
native/agent/: CMakeLists.txt  agent.properties  build_java.sh  debug_test_agent.sh  get_profiling_data.sh  get_profiling_data_callgraph.sh  test_agent.sh  test_agent2_jdk8.sh  test_agent2_jdk8_operf.sh  test_agent_jdk8.sh  test_version.sh  test_version_jdk7.sh  test_version_jdk8.sh
native/agent/java/: Agent.java  build.sh
native/agent/src/agent_util/: agent_util.c
native/agent/src/main/cpp/: abstracttracingprofiler.cpp  abstracttracingprofiler.h  agent.cpp  agent.h  agentoptions.cpp  agentoptions.h  agentruntime.cpp  agentruntime.h  globals.h  javaclassesinfo.cpp  javaclassesinfo.h  javaclassinfo.cpp  javaclassinfo.h  javamethodinfo.cpp  javamethodinfo.h  javathreadinfo.cpp  javathreadinfo.h  javathreadsinfo.cpp  javathreadsinfo.h  osmetrics.cpp  osmetrics.h  simplecallcounterprofiler.cpp  simplecallcounterprofiler.h  stacktracer.cpp  stacktracer.h  threadcallstackprofiler.cpp  threadcallstackprofiler.h  tickscounter.cpp  tickscounter.h  utils.cpp  utils.h
perftest/: pom.xml  reb_black_tree.sh
perftest/src/main/java/com/focusit/: MyBenchmark.java
utils/: pom.xml
utils/src/main/java/com/focusit/utils/metrics/: MethodsMap.java  MethodsMapDumper.java  StatisticDumper.java  Statistics.java
web-analyzer/: pom.xml
web-analyzer/src/main/java/com/focusit/agent/analyzer/: Application.java
web-analyzer/src/main/java/com/focusit/agent/analyzer/configuration/: MongoConfiguration.java
web-analyzer/src/main/resources/: application.properties  mongo.properties
web-analyzer/src/main/resources/public/assets/css/: admin_main.css  fotorama.css  user_main.css
web-analyzer/src/main/resources/public/assets/js/: app.js  chart.js  configuration.js  dataview.js  eventbus.js  services.js
web-analyzer/src/main/resources/public/assets/js/controllers/: jvm.js  methods.js  profiler.js  sessions.js  system.js  threads.js
web-analyzer/src/main/resources/public/assets/js/directives/: appsessionrec.js
web-analyzer/src/main/resources/public/assets/templates/: jvm.html  methods.html  profiler.html  sessions.html  system.html
web-analyzer/src/main/resources/public/assets/templates/directives/: appsessionrec.html
web-analyzer/src/main/resources/templates/: index.html
web-analyzer/src/main/webapp/: index.jsp
web-example/: pom.xml
web-example/src/main/java/com/focusit/agent/example/: TestServlet.java
web-example/src/main/webapp/WEB-INF/: web.xml
(+83 files in other folders)
